2008-01-16 [colin]	0.17.0cvs3

	* src/date.c
		Fix build on FreeBSD

2008-01-15 [colin]	0.17.0cvs2

	* src/date.c
		Fix bug 1461, 'several components #define 
		_XOPEN_SOURCE improperly'

2007-12-28 [colin]	0.17.0cvs1

	* src/feed.c
	* src/feed.h
	* src/rssyl_cb_menu.c
	* src/rssyl_cb_menu.h
	* src/rssyl_gtk.c
		Add OPML import.

2007-12-17 [paul]	0.17.0

	0.17.0 released

2007-12-17 [paul]	0.16.0cvs2

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-11-29 [ticho]	0.16.0cvs1

	* configure.ac
		Updated claws-mail minimum version.

2007-11-19 [paul]	0.16.0

	0.16.0 released

2007-11-19 [paul]	0.15.0cvs17

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Reszo, Andrea Spadaccini, Frederico Goncalves
		Guimaraes, Andrej Kacian, and Ralph Young

2007-11-08 [ticho]	0.15.0cvs16

	* src/feed.c
		Fix obvious crasher bug introduced in cvs14.

2007-11-08 [ticho]	0.15.0cvs15

	* src/feed.c
		Fix potential memory corruption caused by one of my
		previous commits. (Duh!)

2007-11-07 [ticho]	0.15.0cvs14

	* src/feed.c
		Fix a memory leak.

2007-10-27 [ticho]	0.15.0cvs13

	* src/feed.c
		Some fixes for rssyl_format_string() and its usage.

2007-10-05 [colin]	0.15.0cvs12

	* src/feed.c
		Fix warning

2007-10-04 [ticho]	0.15.0cvs11

	* src/parsers.c
		Small fix for my previous commit.

2007-10-04 [ticho]	0.15.0cvs10

	* src/feed.c
	* src/parsers.c
		Parse Atom enclosures.
		Say "size unknown" if source feed doesn't announce size
		of an enclosure.

2007-10-04 [ticho]	0.15.0cvs9

	* src/feed.c
	* src/parsers.c
		Parse Atom enclosures.
		Say "size unknown" if source feed doesn't announce
		enclosure size.

2007-10-04 [colin]	0.15.0cvs8

	* src/feed.c
	* src/rssyl_prefs.c
		Verify success on writes

2007-10-03 [colin]	0.15.0cvs7

	* src/feed.c
		Fix warnings

2007-10-03 [colin]	0.15.0cvs6

	* configure.ac
		Fix missing type checks
