@@ -118,3 +118,4 @@
 ( cvs diff -u -r 1.1.2.89 -r 1.1.2.90 src/feed.c;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/feed.h;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/rssyl_cb_menu.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/rssyl_cb_menu.h;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/rssyl_gtk.c;  ) > 0.17.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/date.c;  ) > 0.17.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/date.c;  ) > 0.17.0cvs3.patchset
+( cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/Makefile.am;  diff -u /dev/null src/opml.c;  diff -u /dev/null src/opml.h;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/rssyl.c;  ) > 0.17.0cvs4.patchset
