@@ -1,0 +1,8 @@
+#ifndef __RSSYL_OPML
+#define __RSSYL_OPML
+
+#include "rssyl.h"
+
+void rssyl_opml_export(void);
+
+#endif /* __RSSYL_OPML */
